--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,8 @@ body {
  }
 
  .pageWrapper {
-  background-color: rgba(145, 77, 21, 0.1)!important;
+  background-color: rgba(145, 77, 21, 0.06)!important;
+  background-size: cover;
  }
 
  .pageWrapper {
@@ -50,5 +51,11 @@ body {
 }
 
 .right-section {
-  padding: 20px;
+  padding: 60px;
+}
+.right-section img {
+  max-width: 50%;
+  aspect-ratio: 1 / 1; /* Сохраняет пропорции изображения */
+  object-fit: cover;
+  border-radius: 50%;
 }
