--- a/src/App.css
+++ b/src/App.css
@@ -11,40 +11,44 @@ body {
   justify-content: space-between;
   align-items: center;
   height: 100vh;
+  /* margin-left: 40px; */
   /* padding: 20px;  */
   background-color: rgba(145, 77, 21, 0.06) !important;
 }
 
 .left-section {
-  flex: 1;
+  /* flex: 1; */
+  flex-basis: 60%;
   display: flex;
-  margin-left: 40px; /* Увеличиваем отступ от края страницы слева */
-  margin-top: 40px; /* Поднимаем надпись немного вверх */
-  flex-direction: column;
-  align-items: flex-start; /* Изменяем выравнивание по горизонтали */
+  margin-left: 40px;
+  /* flex-direction: column;
+  align-items: flex-start;  */
   padding: 20px;
 }
 
 .right-section {
-  flex: 1;
+  /* flex: 1; */
+  flex-basis: 40%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .right-section img {
-  max-width: 70%;
+  max-width: 90%;
+  margin-right: 20px;
   aspect-ratio: 1 / 1;
   object-fit: cover;
   border-radius: 50%;
 }
 
 .typing-text {
-  height: 100px;  
+  height: 100px;
   margin-left: 30px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;  
+  /* justify-content: space-around;   */
+  justify-content: flex-start;
 }
 
 .line1,
@@ -74,4 +78,28 @@ body {
   font-weight: 400;
   color: rgb(0, 0, 0);
   -webkit-text-stroke: 0.4px black;
+}
+
+.contact-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  padding: 20px 0;
+}
+
+.contact-icon {
+  font-size: 30px;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.contact-icon:hover {
+  color: #0073b1;
 }
