--- a/src/pages/home.styles.css
+++ b/src/pages/home.styles.css
@@ -1,31 +1,11 @@
-body {
-  background-image: url("../../../public/assets/watercolorPapper_11.jpg");
-  background-size: cover;
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background-color: rgba(145, 77, 21, 0.06) !important;
-  height: 100vh;
-  overflow-y: auto;
-}
-
-.navbar {
-  margin-left: 40px;
-}
-
-.app-container {
-  max-width: "116rem";
-  width: "100%";
-}
-
-/* .pageWrapper {
+.pageWrapper {
   margin-top: 85px;
   display: flex;
   align-items: flex-start;
   height: 100vh;
-} */
+}
 
-/* .left-section {
+.left-section {
   flex-basis: 60%;
   display: flex;
   flex-direction: column;
@@ -33,9 +13,9 @@ body {
   margin-top: 60px;
   margin-left: 40px;
   padding-left: 20px;
-} */
+}
 
-/* .right-section {
+.right-section {
   flex-basis: 40%;
   display: flex;
   justify-content: center;
@@ -50,7 +30,7 @@ body {
   aspect-ratio: 1 / 1;
   object-fit: cover;
   border-radius: 50%;
-} */
+}
 
 .typing-text {
   height: 100px;
